--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,28 @@
 /* Add application styles & imports to this file! */
 
 @import url(https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css);
+
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab|Roboto:400,900&display=swap');  
+
+* {
+    font-family: Roboto, sans-serif;
+}
+h2 {
+    font-family: "Roboto Slab", serif;
+}
+.dropdown-menu, .form-control {
+    border-radius: 0
+}
+.display-biggest {
+    font-family: Roboto, sans-serif;
+    font-weight: 900;
+    font-size: 116px;
+}
+body {
+    min-height: 100vh;    
+}
+.pos-fix.b0 {
+    position: fixed;
+    bottom: 0
+}
+      
