--- a/src/app/blog-posts-component/blog-posts.component.html
+++ b/src/app/blog-posts-component/blog-posts.component.html
@@ -1,7 +1,8 @@
 <div class="container">
 <div class="row my-5">
 <div class="col-sm-12 col-md-7">
-  <img class="img-fluid" src="./netflix.jpg" alt="netflix on a laptop">
+  <!-- Stackblitz doesn't currently support images, so we're hot-linking from the source -->
+  <img class="img-fluid" src="https://images.unsplash.com/photo-1512070679279-8988d32161be?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=678&q=80" alt="netflix on a laptop">
     </div>
   <div class="col-sm-12 col-md-5">
     <h2 class="h3">Netflix adds new series</h2>
@@ -15,7 +16,8 @@
 </div>
 <div class="row my-5">
   <div class="col-sm-12 col-md-7 order-1">
-    <img class="img-fluid" src="./old-theatre.jpg" alt="old theatre">
+    <!-- Stackblitz doesn't currently support images, so we're hot-linking from the source -->
+    <img class="img-fluid" src="https://images.unsplash.com/photo-1507924538820-ede94a04019d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="old theatre">
     </div>
     <div class="col-sm-12 col-md-5 order-2">
       <h2 class="h3">Ticket sales doubling</h2>
